# obsidian-local-wiki-mcp

./: .env.example  .gitignore  README.md  ROADMAP.md  VECTOR_SEARCH_PROPOSAL.md  pyproject.toml  repo_mapping.yaml.example  settings.json.example
.github/workflows/: ci.yml
src/obsidian_mcp/: __init__.py  cli.py  config.py  db.py  deep_onboard.py  dev_log.py  gaps.py  hooks.py  indexer.py  llm.py  onboarding.py  pulse.py  repo_manager.py  server.py  strategy.py  tools.py  vectors.py
tests/: conftest.py  test_db.py  test_dev_log.py  test_hooks.py  test_indexer.py  test_tools.py  test_vectors.py
